# Q4_Sol_Canfly

./: README.md
prediction-game/: Anchor.toml  package-lock.json  package.json
prediction-game/programs/prediction-game/: Cargo.toml
prediction-game/programs/prediction-game/src/: errors.rs  lib.rs  state.rs
prediction-game/programs/prediction-game/src/instructions/: close_game.rs  finalize_game.rs  mod.rs  player_claim.rs  player_guess.rs  start_game.rs
prediction-game/tests/: prediction-game.ts
ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts
